syntax = "proto3";
option java_outer_classname = "ClientSendMessage";
option java_package = "com";

//消息类型序号
enum MSG {
   //登录登出信息
   LAUNCH_REQUEST = 0;
   LOGOUT_MESSAGE = 1;
   //发送对话消息
   SEND_CONTENT = 2;
   ANNOUNCEMENT_MESSAGE = 3;
   //进入问题房间
   QUESTION_ENTER_REQUEST = 4;
   //评价信息
   GOOD_QUESTION_REQUEST = 5;
   GOOD_USER_REQUEST = 7;
   //获取Cos签名
   GET_COS_SIGN_REQUEST = 9;
   //消息显示信息
   QUESTION_INFORMATION_REQUEST = 10;
   USER_INFORMATION_REQUEST = 11;
   GET_QUESTION_LIST_REQUEST = 12;
   //创建取消问题
   CREATE_QUESTION_REQUEST = 15;
   ABANDON_QUESTION_REQUEST = 16;
   //搜索内容
   SEARCH_INFORMATION_REQUEST = 17;
}

//-----------枚举定义---------------//

//内容类型
enum CONTENT_TYPE {
    TEXT_MESSAGE = 0;
    PICTURE_MESSAGE = 1;
    VOICE_MESSAGE = 2;
}
//图像类型
enum PICTURETYPE {
    JPEG = 0;
    PNG = 1;
    GIF = 2;
}
//搜索类型
enum SEARCHTYPE {
    QUESTION = 0;
}

// 排序类型
enum RANKORDER {
    ASCENDING = 0;
    DESCENDING = 1;
}

// 排序参照
enum LIST_REFERENCE {
    QUESTION_NUMBERS = 0;
    PRAISE_TIMES = 1;
    USERS_OF_QUESTION = 2;
    CLICK_TIMES = 3;
    TIME = 4;
}

//-----------底层消息--------------//

//发送信息
message ContentMessage {
    string content = 1;
}

//------------具体消息-----------//

//登入信息
message LaunchRequest {
    string password = 2;
}

//登出信息
message LogoutMessage {
}

//发送对话消息
message SendContent {
    int64 questionID = 1;
    string content = 2;
    string time = 3;
    string user = 4;
    string pic_url = 5;
}

//通告信息
message AnnouncementMessage {
    string text = 1;
}

// //进入问题房间消息
message QuestionEnterRequest {
    int64 questionID = 1;
}

//赞问题
message GoodQuestionRequest {
    int64 questionID = 1;
}

//赞用户
message GoodUserRequest {
    string user = 1;
}

//需要问题信息
message QuestionInformationRequest {
    int64 questionID = 1;
}

//需要用户信息
message UserInformationRequest {
    string username = 1;
}

//更新问题列表请求
message GetQuestionListRequest {
    LIST_REFERENCE reference = 1;
    RANKORDER rankorder = 2;
    int32 questionNumber = 3;
}

//提出问题
message CreateQuestionRequest {
    string stem = 1;
    string addition = 2;
    string time = 3;
}

//取消问题
message AbandonQuestionRequest {
    int64 questionID = 1;
}

//搜索内容
message SearchInformationRequest {
    string keyword = 1;
}

//获取Sign
message GetCosSignRequest {
    string filename = 1;
}

//----------------顶层消息----------------------
message Message {
    MSG msg_type = 1;
    string username = 2;
    LaunchRequest lauchRequest = 3;
    LogoutMessage logoutMessage = 4;
    SendContent sendContent = 5;
    AnnouncementMessage announcementMessage = 6;
    QuestionEnterRequest questionEnterRequest = 7;
    GoodQuestionRequest goodQuestionRequest = 8;
    GetCosSignRequest getCosSignRequest = 9;
    GoodUserRequest goodUserRequest = 10;
    QuestionInformationRequest questionInformationRequest = 13;
    UserInformationRequest userInformationRequest = 14;
    GetQuestionListRequest getQuestionListRequest = 15;
    CreateQuestionRequest createQuestionRequest = 18;
    AbandonQuestionRequest abandonQuestionRequest = 19;
    SearchInformationRequest searchInformationRequest = 20;
}
