syntax = "proto3";
option java_outer_classname = "ClientSendMessage";
option java_package = "com";

//消息类型序号
enum MSG {
   //登录登出信息
   LAUNCH_REQUEST = 0;
   LOGOUT_MESSAGE = 1;
   //注册请求
   REGISTER_REQUEST = 6;
   //发送对话消息
   SEND_CONTENT = 2;
   ANNOUNCEMENT_MESSAGE = 3;
   //进入问题房间
   QUESTION_ENTER_REQUEST = 4;
   //评价信息
   GOOD_QUESTION_REQUEST = 5;
   GOOD_USER_REQUEST = 7;
   //获取Cos签名
   FILE_REQUEST = 9;
   //消息显示信息
   QUESTION_INFORMATION_REQUEST = 10;
   USER_INFORMATION_REQUEST = 11;
   GET_QUESTION_LIST_REQUEST = 12;
   //创建取消问题
   CREATE_QUESTION_REQUEST = 15;
   ABANDON_QUESTION_REQUEST = 16;
   //搜索内容
   SEARCH_INFORMATION_REQUEST = 17;
   //把问题标志为已解决
   SOLVED_QUESTION_REQUEST = 18;
   //未知消息
   BAD_MESSAGE = 19;
   //获取用户列表
   GET_USER_LIST_REQUEST = 20;
   WHITE_BOARD_MESSAGE = 21;
   //心跳包
   HEART_BEAT = 22;
}

//-----------枚举定义---------------//

//内容类型
enum CONTENT_TYPE {
    TEXT_MESSAGE = 0;
    PICTURE_MESSAGE = 1;
    VOICE_MESSAGE = 2;
}
//图像类型
enum PICTURETYPE {
    JPEG = 0;
    PNG = 1;
    GIF = 2;
}
//搜索类型
enum SEARCHTYPE {
    QUESTION = 0;
}

// 排序类型
enum RANKORDER {
    ASCENDING = 0;
    DESCENDING = 1;
}

// 排序参照
enum LIST_REFERENCE {
    QUESTION_NUMBERS = 0;
    PRAISE_TIMES = 1;
    USERS_OF_QUESTION = 2;
    CLICK_TIMES = 3;
    TIME = 4;
}

//------------具体消息-----------//

//登入信息
message LaunchRequest {
    string password = 2;
}

//登出信息
message LogoutMessage {
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string mail_address = 3;
    string signature = 4;
}

//发送对话消息
message SendContent {
    int64 questionID = 1;
    string content = 2;
    repeated string pictures = 5;   
    string time = 3;
    string user = 4;
    map<int32, int64> markMap = 6;
}

//通告信息
message AnnouncementMessage {
    string text = 1;
}

// //进入问题房间消息
message QuestionEnterRequest {
    int64 questionID = 1;
}

//赞问题
message GoodQuestionRequest {
    int64 questionID = 1;
}

//赞用户
message GoodUserRequest {
    string user = 1;
}

//需要问题信息
message QuestionInformationRequest {
    int64 questionID = 1;
}

//需要用户信息
message UserInformationRequest {
    string username = 1;
}

//更新问题列表请求
message GetQuestionListRequest {
    LIST_REFERENCE reference = 1;
    RANKORDER rankorder = 2;
    int32 questionNumber = 3;
}

//提出问题
message CreateQuestionRequest {
    string stem = 1;
    repeated string stempic = 5;
    string addition = 2;
    repeated string additionpic = 6;
    string time = 3;
    repeated string keywords = 4;
}

//取消问题
message AbandonQuestionRequest {
    int64 questionID = 1;
}

//搜索内容
message SearchInformationRequest {
    repeated string keywords = 1;
    int32 searchID = 2;
}

//文件请求
message FileRequest {
    repeated string filename = 1;
    repeated string md5 = 4;
    repeated string localFilePath = 3;
    enum SIGNTYPE {
        DOWNLOAD = 0;
        UPLOAD = 1;
    }
    SIGNTYPE signType = 2;
}

message HeartBeat {
    bool online = 1;
}

//标志问题为解决状态
message SolvedQuestionRequest {
    int64 questionID = 1;
}

//获取用户列表
message GetUserListRequest {
    string reference = 1;
    enum USER_LIST_TYPE {
        ACQUAINTANCE_LIST = 0;
        USERS_IN_ROOM_LIST = 1;
    }
    USER_LIST_TYPE userListType = 2;
    string param = 3;
}

message WhiteBoardMessage {
    int32 x1 = 1;
    int32 y1 = 2;
    int32 x2 = 3;
    int32 y2 = 4;
    enum COLOR {
        RED = 0; ORANGE = 1; YELLOW = 2;
        GREEN = 3; CYAN = 4; BLUE = 5; MAGENTA = 6;
        WHITE = 7; BLACK = 8;
    }
    int32 color = 5;
    float pensize = 6;
    int64 questionId = 7;
    bool isCls = 8;
    bool isACls = 9;
    bool isRefresh = 10;
    bool isReceiveImage = 11;
    message WhiteBoardImage {
        message GraphicPoint {
            int32 x1 = 1;
            int32 y1 = 2;
            int32 x2 = 3;
            int32 y2 = 4;
            int32 color = 5;
            float pensize = 6;
        }
        message GraphicRect {
            int32 x1 = 1;
            int32 y1 = 2;
            int32 x2 = 3;
            int32 y2 = 4;
        }
        repeated GraphicPoint points = 1;
        repeated GraphicRect rects = 2;
    }
    WhiteBoardImage image = 12;
}

//----------------顶层消息----------------------
message Message {
    MSG msg_type = 1;
    string username = 2;
    LaunchRequest lauchRequest = 3;
    LogoutMessage logoutMessage = 4;
    SendContent sendContent = 5;
    AnnouncementMessage announcementMessage = 6;
    QuestionEnterRequest questionEnterRequest = 7;
    GoodQuestionRequest goodQuestionRequest = 8;
    FileRequest fileRequest = 9;
    GoodUserRequest goodUserRequest = 10;
    RegisterRequest registerRequest = 11;
    QuestionInformationRequest questionInformationRequest = 13;
    UserInformationRequest userInformationRequest = 14;
    GetQuestionListRequest getQuestionListRequest = 15;
    CreateQuestionRequest createQuestionRequest = 18;
    AbandonQuestionRequest abandonQuestionRequest = 19;
    SearchInformationRequest searchInformationRequest = 20;
    SolvedQuestionRequest solvedQuestionRequest = 21;
    GetUserListRequest getUserListRequest = 22;
    WhiteBoardMessage whiteBoardMessage = 23;
    HeartBeat heartBeat = 24;
}
